--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'net.sf.ehcache:ehcache'
 
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     implementation 'commons-codec:commons-codec:1.15'
 
